# Gimnasio

backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: Main.py  config.py  schema.py
backend/app/controller/: Admin_Cliente.py  Administrador-Entrenador.py  Administrador_Entrenador.py  Administradores.py  Cliente.py  Entrenadores.py  Usuario.py  authentication.py
backend/app/model/: Actividades.py  Administradores.py  Citas.py  Cliente.py  Entrenadores.py  Entrenamientos.py  Membresias.py  Proveedores.py  __init__.py  actividad_entrenador.py  compra_membresia.py  mixins.py
backend/app/repository/: Actividades.py  Administradores.py  Citas.py  Cliente.py  Entrenadores.py  Entrenamientos.py  Membresias.py  Proveedores.py  actividad_entrenador.py  auth_repo.py  base_repo.py  compra_membresia.py
backend/app/service/: Administradores.py  Cliente.py  Entrenadores.py  Usuario.py  auth_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0e5d0205a9dd_add_initial_tables.py  36283b8d94db_add_initial_tables.py  4bb8e0940a1c_add_initial_tables.py  5225b7faa9c6_add_initial_tables.py  5d3e3040618a_edited_tables.py  7d3b303aacfa_edited_tables.py  a00f2fa92846_edited_tables.py  a47a002e8ab2_add_initial_tables.py  a8b836a694e3_add_initial_tables.py  ad72e4170f42_edited_tables.py  b68b02f45845_add_initial_tables.py  bc577fb26921_edited_tables.py  c02367f31436_add_initial_tables.py  c5fde8ffe258_add_initial_tables.py  c785cf0e5139_add_initial_tables.py  d0295b52ada4_add_initial_tables.py  e41c0a30cf76_add_initial_tables.py  (+5 more)
frontend/src/: App.js  (+7 more)
(+51 files in other folders)
