[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["sebaslazar <143653862+sebaslazar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.6"
fastapi = "^0.112.2"
sqlalchemy = "^2.0.32"
sqlmodel = "^0.0.22"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start= "app.Main:start"